--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
     <!-- The style.css file allows you to change the look of your web pages.
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
-    <script src="/reader.js"></script>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+    <script src="scripts/showdown.js"></script>
+    <script src="scripts/showdown-ext.js"></script>
+    <script src="scripts/reader.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <header>
